--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-
+<!DOCTYPE html>
+<html>
+ <head>
+   <title> Ancient Near East Quiz </title>
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <script src="MyScript.js"></script>
+ </head>
+ <body>
+  <h1> Ancient Near East Quiz</h1>
+   <img src="Standard.jpg" alt="Standard of Ur">
+   <img src="Cuneiform.jpg" alt="Sumerian's writing form">
+   <img src="Lamassu.jpg" alt="man-head, body of bull,feet of lions">
+   <img src="CylinderSeals.jpg" alt="a relief of a cylinder seal">
+ </body>
+</html>
