--- a/index.html
+++ b/index.html
@@ -9,8 +9,20 @@
  <body>
   <h1> Ancient Near East Quiz</h1>
    <img src="Standard.jpg" alt="Standard of Ur">
+   <p> <b>The Standard of Ur depicts what?</b> </p?>
+    <p class="red1"> A) The daily lives of the Sumerian.</p>
+    <p class="red1"> B) Laws that the Sumerian must follow.</p>
+	<p class="red1"> C) Peace time after war.</p>
+	<p class="red1"> D) War.</p>
+	<p class="A1"> E) C and D.
    <img src="Cuneiform.jpg" alt="Sumerian's writing form">
+   <p> <b>Cuneiform is...?</b> </p>
+   <p class="red2"> A. Sumerian writing.</p>
+   <p class="red2"> B. The first written language.</p>
+   <p class="red2"> C. Wedge shaped</p>
+   <p class="A2"> D. All of the above.</p>
    <img src="Lamassu.jpg" alt="man-head, body of bull,feet of lions">
    <img src="CylinderSeals.jpg" alt="a relief of a cylinder seal">
+   <button type="button"> Start Over </button>
  </body>
 </html>
